# qotd-rs

./: Cargo.toml
.githooks/: pre-commit
src/: args.rs  lib.rs  main.rs  quotes.rs  server.rs
