[package]
name = "qotd-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive", "string", "wrap_help"], optional = true }
futures = "0.3.30"
nix = { version = "0.28.0", features = ["user"] }
rand = "0.8.5"
rand_distr = "0.4.3"
tokio = { version = "1.37.0", features = ["rt", "net", "fs", "macros", "io-util", "sync"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", optional = true }

[features]
default = [ "cli" ]
cli = [ "clap", "tracing-subscriber" ]
